#-------------------------------------------------------------------------------
#
#   Jan.Mooiman@deltares.nl
#   26 oct 2007
#
#   Copyright (C)  Stichting Deltares, 2011-2013.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
bin_PROGRAMS = demo_00

demo_00_SOURCES = \
	demo_00.f
demo_00_LDADD = \
	../../packages/nefis/src/libNefis.la \
	$(FCLIBS)
