#-------------------------------------------------------------------------------
#
#   Jan.Mooiman@deltares.nl
#   26 oct 2007
#
#   Copyright (C)  Stichting Deltares, 2011-2013.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
bin_PROGRAMS = demo_01

demo_01_SOURCES = \
	demo_01.f
demo_01_LDADD = \
	../../packages/nefis/src/libNefis.la \
	$(FCLIBS)
