#-------------------------------------------------------------------------------
#
#   Jan.Mooiman@deltares.nl
#   26 oct 2007
#
#   Copyright (C)  Stichting Deltares, 2011-2013.
#-------------------------------------------------------------------------------

include $(top_srcdir)/common.am
bin_PROGRAMS = demo_02

demo_02_SOURCES = \
	demo_02.f
demo_02_LDADD = \
	../../packages/nefis/src/libNefis.la \
	$(FCLIBS)
